--- a/index.html
+++ b/index.html
@@ -3,22 +3,7 @@
 <html>
 <head>
 <title>my favorite movie</title>
-<style>
-  header{
-    background-color: black;
-    hieght: 100px;
-   color: white;
-  }
-</style>
-
-<style>
-  footer{
-    background-color: black;
-    hieght: 100px;
-   color: white;
-  }
-</style>
-
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header>
@@ -55,26 +40,11 @@
     </li>
 </nav>
 </footer>
-<script src="App.js"></script>
-<<<<<<< HEAD
 
-<script src="lab05.js"></script>
+<script src="lab06.js"></script>
 
-<script src="lab05.js"></script>
-
-=======
-<<<<<<< HEAD
-
-<script src="lab05.js"></script>
-
-=======
-<<<<<<< HEAD
-<script src="lab05.js"></script>
-=======
->>>>>>> 2ec739af0ddfa6dbe88df1b509ec677d6e0da248
->>>>>>> e5d246396a32c7c1cc0a33a94b35e2071c1bc3fe
->>>>>>> c39e2c99f179ee0e91105a7a2d98ed085807d5c3
 </body>
+
 </html>
 
 
